🚑 (ux) Fix layout break with code blocks
pre code blocks that don't wrap are breaking single-column layout, and until a more robust solution
can be found, this hotfix will do

--- a/src/sass/components/_pre.scss
+++ b/src/sass/components/_pre.scss
@@ -25,7 +25,6 @@
     line-height: 1.45;
     outline: 0;
     padding: 1rem;
-    white-space: pre;
   }
 }
 
